@@ -5,6 +5,7 @@ Unreleased
 - Add PDB source indexing (@ivan-danilov, #137)
 - Fix unit test with weak reference broken by garbage collector changes in .NET 4.6.x (@ivan-danilov, #138)
 - Fix performance counter instances hanging around after the process using Windsor has ended (@mackenzieajudd, #146, #149)
+- Fix version of Castle.Core dependency in NuGet packages to indicate Castle.Core 4.0 is incompatible (#161)
 
 3.3.0 (2014-05-18)
 ==================
